DefaultMarkup menu is now hidden by default (without js). This fixes the short menu flicker after page load.

--- a/KnowWE/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/defaultMarkup.css
+++ b/KnowWE/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/defaultMarkup.css
@@ -65,6 +65,9 @@
 }
 
 .defaultMarkupFrame .headerMenu {
+	opacity: 0.3;
+	z-index: 1000;
+	max-width: 35px;
 	background-color: white; 
 	right:			1px; 
 	position:		absolute; 
@@ -90,6 +93,7 @@
 }
 
 .defaultMarkupFrame .markupMenu {
+	display: none;
 	position:	absolute;
 	border:		2px solid #DDD;
 	background-color: white; 
